--- a/wp-content/themes/casinochecking.com/style.css
+++ b/wp-content/themes/casinochecking.com/style.css
@@ -2173,43 +2173,43 @@ header.site-header .site-navigation a { color: #ffffff; font-size: 18px; text-tr
 
 header.site-header #menu-right { text-align: right; }
 
-header.site-header.is-active #menu-mobile-header { display: block; }
+.is-active #menu-mobile-header { display: block; }
 
-header.site-header #menu-mobile-header { width: 100%; text-align: center; display: none; margin: 0px; text-transform: uppercase; padding: 100px 20px 100px; perspective: 1000px; lisst-style-type: none; }
+#menu-mobile-header { width: 100%; text-align: center; display: none; margin: 0px; text-transform: uppercase; padding: 100px 20px 100px; perspective: 1000px; list-style-type: none; }
 
-header.site-header #menu-mobile-header li a { font-size: 1.5rem; color: #eee; }
+#menu-mobile-header li a { font-size: 1.5rem; color: #eee; }
 
-header.site-header #menu-mobile-header li.current_page_item a { color: #f81c1e; }
-
-header.site-header .menu-mobile-header-container { position: absolute; top: 0; height: 100vh; background: #3f3e46; opacity: 0; overflow: hidden; visibility: hidden; transition: opacity .3s ease, visibility .3s 0s ease; overflow-y: scroll; -webkit-overflow-scrolling: touch; display: -ms-flexbox; display: flex; width: 100%; -ms-flex-flow: row wrap; flex-flow: row wrap; -ms-flex-align: center; align-items: center; }
-
-.is-active .menu-mobile-header-container { opacity: 0.96 !important; visibility: visible !important; transition: opacity .3s ease, visibility 0s ease !important; }
+#menu-mobile-header li.current_page_item a { color: #f81c1e; }
 
 .mobile-row { position: relative; }
 
 .mobile-row .nine { width: 74.6%; }
 
-.mobile-row .hamburger { position: absolute; top: 49%; right: 10%; }
+.hamburger { position: absolute; top: 49%; right: 10%; }
 
-.mobile-row .three { box-sizing: border-box; text-align: right; }
+.three { box-sizing: border-box; text-align: right; }
 
-.mobile-row #nav-toggle { cursor: pointer; }
+#nav-toggle { cursor: pointer; }
 
-.mobile-row #nav-toggle span, .mobile-row #nav-toggle span:before, .mobile-row #nav-toggle span:after { cursor: pointer; border-radius: 1px; height: 3px; width: 30px; background: white; position: absolute; display: block; content: ''; }
+#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after { cursor: pointer; border-radius: 1px; height: 3px; width: 30px; background: white; position: absolute; display: block; content: ''; }
 
-.mobile-row #nav-toggle span:before { top: -8px; }
+#nav-toggle span:before { top: -8px; }
 
-.mobile-row #nav-toggle span:after { bottom: -8px; }
+#nav-toggle span:after { bottom: -8px; }
 
-.mobile-row #nav-toggle span, .mobile-row #nav-toggle span:before, .mobile-row #nav-toggle span:after { transition: all 500ms ease-in-out; }
+#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after { transition: all 500ms ease-in-out; }
 
-.mobile-row #nav-toggle.active span { background-color: transparent; }
+#nav-toggle.active span { background-color: transparent; }
 
-.mobile-row #nav-toggle.active span:before, .mobile-row #nav-toggle.active span:after { top: 0; }
+#nav-toggle.active span:before, #nav-toggle.active span:after { top: 0; }
 
-.mobile-row #nav-toggle.active span:before { -ms-transform: rotate(45deg); transform: rotate(45deg); }
+#nav-toggle.active span:before { -ms-transform: rotate(45deg); transform: rotate(45deg); }
 
-.mobile-row #nav-toggle.active span:after { -ms-transform: rotate(-45deg); transform: rotate(-45deg); }
+#nav-toggle.active span:after { -ms-transform: rotate(-45deg); transform: rotate(-45deg); }
+
+.menu-mobile-header-container { position: fixed; top: 0; height: 100%; max-height: 100%; background: #3f3e46; opacity: 0; overflow: hidden; visibility: hidden; transition: opacity .3s ease, visibility .3s 0s ease; -webkit-overflow-scrolling: touch; display: -ms-flexbox; display: flex; width: 100%; -ms-flex-align: center; align-items: center; }
+
+.is-active.menu-mobile-header-container { opacity: 0.96 !important; z-index: 70; overflow: hidden; visibility: visible !important; transition: opacity .3s ease, visibility 0s ease !important; }
 
 .casino-sidebar { padding-right: 20px; padding-left: 20px; }
 
